# moum-server

./: .gitignore  Cargo.toml  go.mod  gqlgen.yml  handlers.go  main.go  main_test.go  response.go
accessor/: accessor.go  mem_accessor.go  mem_accessor_test.go
article/: accessor.go  article.go  mem_accessor.go  mem_accessor_test.go
graph/: resolver.go  schema.graphqls  schema.resolvers.go
graph/model/: models_gen.go
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-10-18-092331_create_articles/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/graphql/: mod.rs  mutation.rs  query.rs
