[package]
name = "moum-server"
version = "0.1.0"
authors = ["Shin Seunghun <seunghunee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.11"
juniper_hyper = "0.5.2"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
