[package]
name = "moum-server"
version = "0.1.0"
authors = ["Shin Seunghun <seunghunee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_hyper = { git = "https://github.com/graphql-rust/juniper", package = "juniper_hyper" }
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid"] }
uuid = { version = "0.6.0" }